# Rag-Evolution

./: .gitignore  basic-llm-langgraph.ipynb  basic-llm.ipynb  main.py  pyproject.toml
00_rag_fundamentals/: 01_what_is_rag.md  02_chunking_strategies.md  03_embeddings_explained.md  04_vector_databases.md
datasets/markdown_docs/: 01_artificial_intelligence_and_ml.md  02_business_strategy_and_market_analysis.md  03_climate_change_and_environment.md  04_customer_support_and_troubleshooting.md  05_cybersecurity_and_incident_response.md  06_education_and_training_materials.md  07_financial_reporting_and_analysis.md  08_healthcare_and_clinical_guidelines.md  09_human_health_and_nutrition.md  10_legal_and_compliance_handbook.md  11_software_engineering_api_documentation.md  12_space_exploration.md  13_world_history_and_civilizations.md
datasets/sample_docs/: 01_artificial_intelligence_and_ml.docx  03_climate_change_and_environment.docx  05_cybersecurity_and_incident_response.docx  07_financial_reporting_and_analysis.docx  08_healthcare_and_clinical_guidelines.docx  11_software_engineering_api_documentation.docx  13_world_history_and_civilizations.docx
datasets/structured_data/: 01_llm_models_comparison.csv  climate_data.csv  historical_events.csv  nutrition_facts.csv  space_missions.csv
scripts/: convert_sample_docs.py  create_numbered_copies.py
